[package]
name = "blaze-turbo"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["cargo"] }
structopt = "0.3.26"
failure = "0.1.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
env_logger = "0.10.1"
sled = "0.34.7"
dashmap = "5.3.4"
num_cpus = "1.13.1"
rayon = "1.5.3"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tempfile = "3.9.0"
walkdir = "2.4.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"
panic-control = "0.1.4"
crossbeam-utils = "0.8.11"

[[bench]]
name = "benches"
harness = false

[[bench]]
name = "thread_pool"
harness = false